--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/erinkelley/.local/share/virtualenvs/tunr_django-olVIdSm9/bin/python"
+    "python.pythonPath": "/Users/erinkelley/.local/share/virtualenvs/tunr_django-olVIdSm9/bin/python",
+    "python.formatting.provider": "yapf"
 }
